--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,10 @@ Title: crisprseekplus
 Version: 0.99.0
 Date: 2016-07-25
 Author: Sophie Wigmore <Sophie.Wigmore@umassmed.edu>,
-    Alper Kucukural <alper.kucukural@umassmed.edu>
+    Alper Kucukural <alper.kucukural@umassmed.edu>,
+    Lihua Julie Zhu <julie.zhu@umassmed.edu>,
+    Michael Brodsky <Michael.Brodsky@umassmed.edu>,
+    Manuel Garber <Manuel.Garber@umassmed.edu>
 Maintainer: Alper Kucukural <alper.kucukural@umassmed.edu>
 Description: Bioinformatics platform containing interface 
     to work with offTargetAnalysis and compare2Sequences in 
@@ -23,7 +26,8 @@ Imports:BSgenome.Hsapiens.UCSC.hg19,
     utils,
     GUIDEseq,
     GenomicRanges,
-    GenomicFeatures
+    GenomicFeatures,
+    hash
 RoxygenNote: 5.0.1
 Suggests: testthat,
     rmarkdown,
