xls name fix version fix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ import(org.Hs.eg.db)
 importFrom(DT,dataTableOutput)
 importFrom(DT,datatable)
 importFrom(DT,renderDataTable)
+importFrom(GUIDEseq,GUIDEseqAnalysis)
 importFrom(GenomicFeatures,exons)
 importFrom(GenomicRanges,GRanges)
 importFrom(hash,hash)
