--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,10 @@ export(getLogo)
 export(installpack)
 export(startcrisprseekplus)
 export(trueFalseFunc)
+import(BSgenome.Hsapiens.UCSC.hg19)
 import(CRISPRseek)
 import(GenomicRanges)
+import(TxDb.Hsapiens.UCSC.hg19.knownGene)
 import(org.Hs.eg.db)
 importFrom(DT,dataTableOutput)
 importFrom(DT,datatable)
