--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ importFrom(GenomicFeatures,exons)
 importFrom(GenomicRanges,GRanges)
 importFrom(hash,hash)
 importFrom(shiny,HTML)
+importFrom(shiny,a)
 importFrom(shiny,actionButton)
 importFrom(shiny,actionLink)
 importFrom(shiny,addResourcePath)
@@ -35,6 +36,7 @@ importFrom(shiny,downloadHandler)
 importFrom(shiny,eventReactive)
 importFrom(shiny,fileInput)
 importFrom(shiny,fluidPage)
+importFrom(shiny,fluidRow)
 importFrom(shiny,h4)
 importFrom(shiny,helpText)
 importFrom(shiny,icon)
@@ -51,6 +53,7 @@ importFrom(shiny,radioButtons)
 importFrom(shiny,reactive)
 importFrom(shiny,reactiveValues)
 importFrom(shiny,renderPlot)
+importFrom(shiny,renderPrint)
 importFrom(shiny,renderUI)
 importFrom(shiny,runApp)
 importFrom(shiny,selectInput)
@@ -61,6 +64,7 @@ importFrom(shiny,sidebarLayout)
 importFrom(shiny,sidebarPanel)
 importFrom(shiny,sliderInput)
 importFrom(shiny,stopApp)
+importFrom(shiny,strong)
 importFrom(shiny,tabPanel)
 importFrom(shiny,tabsetPanel)
 importFrom(shiny,tags)
