--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,11 +9,11 @@ export(getLogo)
 export(installpack)
 export(startcrisprseekplus)
 export(trueFalseFunc)
-import(BSgenome.Hsapiens.UCSC.hg19)
 import(CRISPRseek)
 import(GenomicRanges)
-import(TxDb.Hsapiens.UCSC.hg19.knownGene)
-import(org.Hs.eg.db)
+importFrom(AnnotationDbi,get)
+importFrom(BSgenome,getBSgenome)
+importFrom(BiocInstaller,biocLite)
 importFrom(DT,dataTableOutput)
 importFrom(DT,datatable)
 importFrom(DT,renderDataTable)
